<resources>
    <string name="app_name">Login Form</string>
    <string name="register">Register</string>
    <string name="sigh_up">SIGH UP</string>
    <string name="password"> Password</string>
    <string name="email_id"> Email Id</string>
    <string name="username"> Username</string>
    <string name="last_name"> Last Name</string>
    <string name="enter_first_name"> First Name</string>
    <string name="alredy_have_an_account_sign_in">Alredy have an account? Sign in</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="signin">Sign in</string>
</resources>