<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/sighup"
        android:layout_height="180dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="120dp"
            android:layout_height="58dp"
            android:text="@string/register"
            android:textSize="30sp"
            android:textColor="#000000"
            android:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:textColor="@color/white"
            android:id="@+id/fname"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@drawable/inputbox"
            android:drawableStart="@drawable/name"
            android:paddingEnd="20dp"

            android:paddingStart="20dp"
            android:textColorHint="@color/black"

            android:hint="@string/enter_first_name" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:drawableStart="@drawable/name"
            android:paddingStart="20dp"
            android:id="@+id/lname"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"

            android:background="@drawable/inputbox"
            android:hint="@string/last_name" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="#F10000"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:id="@+id/uname"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/user"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"

            android:background="@drawable/inputbox"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/email"
            android:paddingStart="20dp"
            android:id="@+id/email"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:background="@drawable/inputbox"
            android:hint="@string/email_id" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="300dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:drawableStart="@drawable/lock"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:id="@+id/pwd"
            android:layout_height="wrap_content"
            android:background="@drawable/inputbox"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnsighUp"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#C82948"
        android:layout_height="wrap_content"
        android:padding="18dp"

        android:text="@string/sigh_up" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/alredy_have_an_account_sign_in"
        android:textColor="#983597"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />




</LinearLayout>
